--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@types/next-auth": "^3.15.0",
+    "@types/react-big-calendar": "^1.15.0",
     "axios": "^1.7.7",
+    "date-arithmetic": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "nookies": "^2.5.2",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwindcss-animate": "^1.0.7"
   },
