--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-video-testing",
+  "name": "connx_web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,8 +15,8 @@
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "nookies": "^2.5.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
